src/footer/footer.scss
@import "../variables.scss";

$horizontal_breakpoint: 500px;
$img_size: 173px;

.footer {
  margin-top: 6rem;
  overflow: hidden;
  position: relative;

  &:before {
    content: "";
    top: 0;
    left: 0;
    right: 0;
    height: 8px;
    position: absolute;
    background: linear-gradient(to right, $primary, darken($primary, 30));

    @media all and (min-width: $horizontal_breakpoint) {
      background: linear-gradient(to left, $primary, darken($primary, 30));
    }
  }

  .contact {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    padding: 2rem $gutter;
    margin: 0 auto;
    position: relative;
    max-width: $max_width;
    overflow: hidden;

    figure {
      position: absolute;
      bottom: 0;
      right: -10px;
      display: block;
      z-index: -1;
      display: flex;
      flex-direction: column;
      margin: 0;
      width: $img_size;
      height: $img_size;

      img {
        position: absolute;
        transition: transform 0.25s ease;
      }

      .uncopied-img {
        transform: translateY(0);
      }

      .copied-img,
      .failed-img {
        transform: translateY(500px);
      }

      &.copied {
        .uncopied-img,
        .failed-img {
          transform: translateY(500px);
        }

        .copied-img {
          transform: translateY(0);
        }
      }

      &.failed {
        .uncopied-img,
        .copied-img {
          transform: translateY(500px);
        }

        .failed-img {
          transform: translateY(0);
        }
      }

      @media all and (min-width: $horizontal_breakpoint) {
        right: unset;
        left: -10px;
        transform: rotateY(180deg);
      }

      @media all and (min-width: 768px) {
        left: 10%;
      }
    }

    h3 {
      flex-basis: 100%;
      text-align: center;
      margin-bottom: 2rem;
      text-shadow: 0 0 4px black;
    }
  }

  .meta {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    max-width: $max_width;
    margin: 0 auto;
    padding: 2rem $gutter 0;
    border-top: 1px solid rgba(white, 0.5);
    overflow: hidden;
  }

  .copyright,
  .social {
    margin-top: 1rem;
    margin-bottom: 1rem;
    flex-basis: 100%;
  }

  .social {
    display: flex;
    justify-content: center;

    a {
      display: block;

      + a {
        margin-left: 1rem;
      }
    }
  }

  .copyright {
    font-size: 0.75rem;
    line-height: 0.25rem;
    font-weight: 200;
    color: rgba(white, 0.75);
    text-align: center;
    vertical-align: middle;

    img {
      vertical-align: middle;
      margin-right: 0.5rem;
    }
  }

  @media all and (min-width: $horizontal_breakpoint) {
    .meta {
      justify-content: space-between;
      padding: 0.5rem $gutter 0;
    }

    .copyright,
    .social {
      flex-basis: auto;
    }

    .social {
      margin-right: 1rem;
    }
  }

  .contact-button {
    max-width: 100%;
    display: flex;
    justify-content: center;
    position: relative;
    flex-wrap: wrap;
    margin-bottom: 1rem;

    .copy {
      border-radius: 0 2rem 2rem 0;
      border: 2px solid white;
      display: flex;
      align-items: center;
      justify-content: center;
      background: white;
      padding: calc(1rem - 2px) 1.5rem;
      order: 2;

      .fill-target {
        fill: black;
      }

      &:disabled {
        cursor: unset;
      }

      &:focus {
        outline: none;
        border-color: $primary;
        background: $primary;
      }
    }

    svg {
      margin-right: 0.5rem;
    }

    .email-wrap {
      display: flex;
      flex-direction: column;
    }

    .email,
    .width-holder {
      font-size: 0.75rem;
      font: inherit;

      @media all and (min-width: 350px) {
        font-size: 1rem;
      }
    }

    .width-holder {
      max-height: 0;
      overflow: hidden;
      padding: 0 1rem;
      white-space: nowrap;
    }

    .email {
      color: white;
      text-align: center;
      padding: 1rem 0;
      background: black;
      border: 2px solid white;
      border-radius: 2rem 0 0 2rem;

      &:focus {
        outline: none;
        border-color: $primary;
      }

      &::selection {
        background: $primary;
        color: black;
      }
    }

    .message {
      position: absolute;
      font-size: 0.75rem;
      margin-top: 0.5rem;
      top: 100%;
    }
  }

  .fill-target {
    fill: white;
  }

  a:hover {
    .fill-target {
      fill: $primary;
    }
  }
}

